--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <br/>
 <img src="./assets/images/movie-ranking.png" height="200"> 
 <br/>
-<h3><a href="./public/birtday-invite.html">Birthday Invite Project</a></h3>
+<h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
 <br/>
 <img src="./assets/images/birthday-invite.png" height="200">
 
